# apps/client/swagger.json
@@ -1,150 +1,1 @@
-{
-  "openapi": "3.0.0",
-  "paths": {
-    "/ping": {
-      "get": {
-        "operationId": "PingController_ping",
-        "parameters": [],
-        "responses": { "200": { "description": "" } }
-      }
-    },
-    "/register": {
-      "post": {
-        "operationId": "AuthenticationController_register",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/RegisterDto" }
-            }
-          }
-        },
-        "responses": { "201": { "description": "" } }
-      }
-    },
-    "/login": {
-      "post": {
-        "operationId": "AuthenticationController_logIn",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/RegisterDto" }
-            }
-          }
-        },
-        "responses": { "200": { "description": "" } }
-      }
-    },
-    "/logout": {
-      "post": {
-        "operationId": "AuthenticationController_logOut",
-        "parameters": [],
-        "responses": { "200": { "description": "" } }
-      }
-    },
-    "/me": {
-      "get": {
-        "operationId": "AuthenticationController_getProfile",
-        "parameters": [],
-        "responses": { "200": { "description": "" } }
-      }
-    },
-    "/reset-password": {
-      "post": {
-        "operationId": "AuthenticationController_resetPassword",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/UpdatePasswordDto" }
-            }
-          }
-        },
-        "responses": { "200": { "description": "" } }
-      }
-    },
-    "/user": {
-      "patch": {
-        "operationId": "UsersController_updateProfile",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/UpdateUserDto" }
-            }
-          }
-        },
-        "responses": { "200": { "description": "" } }
-      }
-    },
-    "/email-confirmation/confirm": {
-      "post": {
-        "operationId": "EmailConfirmationController_confirm",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/ConfirmEmailDto" }
-            }
-          }
-        },
-        "responses": { "201": { "description": "" } }
-      }
-    },
-    "/email-confirmation/resend-confirmation-link": {
-      "post": {
-        "operationId": "EmailConfirmationController_resendConfirmationLink",
-        "parameters": [],
-        "responses": { "201": { "description": "" } }
-      }
-    },
-    "/google-authentication": {
-      "post": {
-        "operationId": "GoogleAuthenticationController_authenticate",
-        "parameters": [],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": { "$ref": "#/components/schemas/TokenVerificationDto" }
-            }
-          }
-        },
-        "responses": { "201": { "description": "" } }
-      }
-    }
-  },
-  "info": {
-    "title": "Dashboard",
-    "description": "",
-    "version": "1.0",
-    "contact": {}
-  },
-  "tags": [{ "name": "auth", "description": "" }],
-  "servers": [{ "url": "http://localhost:4000}" }],
-  "components": {
-    "securitySchemes": {
-      "bearer": { "scheme": "bearer", "bearerFormat": "JWT", "type": "http" }
-    },
-    "schemas": {
-      "RegisterDto": {
-        "type": "object",
-        "properties": {
-          "email": { "type": "string" },
-          "password": { "type": "string" }
-        },
-        "required": ["email", "password"]
-      },
-      "UpdatePasswordDto": { "type": "object", "properties": {} },
-      "UpdateUserDto": { "type": "object", "properties": {} },
-      "ConfirmEmailDto": { "type": "object", "properties": {} },
-      "TokenVerificationDto": { "type": "object", "properties": {} }
-    }
-  }
-}
+{"openapi":"3.0.0","paths":{"/ping":{"get":{"operationId":"PingController_ping","parameters":[],"responses":{"200":{"description":""}}}},"/register":{"post":{"operationId":"AuthenticationController_register","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/RegisterDto"}}}},"responses":{"201":{"description":""}}}},"/login":{"post":{"operationId":"AuthenticationController_logIn","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/RegisterDto"}}}},"responses":{"200":{"description":""}}}},"/logout":{"post":{"operationId":"AuthenticationController_logOut","parameters":[],"responses":{"200":{"description":""}}}},"/me":{"get":{"operationId":"AuthenticationController_getProfile","parameters":[],"responses":{"200":{"description":"","content":{"application/json":{"schema":{"$ref":"#/components/schemas/UserDto"}}}}}}},"/reset-password":{"post":{"operationId":"AuthenticationController_resetPassword","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/UpdatePasswordDto"}}}},"responses":{"200":{"description":""}}}},"/user":{"patch":{"operationId":"UsersController_updateProfile","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/UpdateUserDto"}}}},"responses":{"200":{"description":""}}}},"/email-confirmation/confirm":{"post":{"operationId":"EmailConfirmationController_confirm","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/ConfirmEmailDto"}}}},"responses":{"201":{"description":""}}}},"/email-confirmation/resend-confirmation-link":{"post":{"operationId":"EmailConfirmationController_resendConfirmationLink","parameters":[],"responses":{"201":{"description":""}}}},"/google-authentication":{"post":{"operationId":"GoogleAuthenticationController_authenticate","parameters":[],"requestBody":{"required":true,"content":{"application/json":{"schema":{"$ref":"#/components/schemas/TokenVerificationDto"}}}},"responses":{"201":{"description":""}}}}},"info":{"title":"Dashboard","description":"","version":"1.0","contact":{}},"tags":[{"name":"auth","description":""}],"servers":[{"url":"http://localhost:4000"}],"components":{"securitySchemes":{"bearer":{"scheme":"bearer","bearerFormat":"JWT","type":"http"}},"schemas":{"RegisterDto":{"type":"object","properties":{}},"UserDto":{"type":"object","properties":{"id":{"type":"string"},"email":{"type":"string"},"name":{"type":"string"},"isEmailConfirmed":{"type":"boolean"},"isRegisteredWithGoogle":{"type":"boolean"}},"required":["id","email","name","isEmailConfirmed","isRegisteredWithGoogle"]},"UpdatePasswordDto":{"type":"object","properties":{}},"UpdateUserDto":{"type":"object","properties":{}},"ConfirmEmailDto":{"type":"object","properties":{}},"TokenVerificationDto":{"type":"object","properties":{}}}}}
